--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,7 +16,7 @@
 </HEAD>
 
 <BODY>
-<H2>Java Challenge Demo</H2>
+<H2>Exercise Goal</H2>
 
 <P>Judging criteria: </P>
 <ol>
@@ -25,11 +25,10 @@
 </ol>
 
 <FORM id="form">
-<H3>Replace all occurrence of character 'a' with 'o' at the give String, and print out the outcome :</H3>
 <TABLE WIDTH="100%">
 <TR>
-  <TD WIDTH="50%">Student Code</td>
-  <TD WIDTH="50%">Expected Code</td>
+  <TD WIDTH="50%"><h3>Student Code<h3></td>
+  <TD WIDTH="50%"><h3>Expected Code</h3></td>
 </TR>
 <tr>
 	<td>
